--- a/css/main.css
+++ b/css/main.css
@@ -95,3 +95,10 @@ h3 {
   margin-right: auto;
   width: 40%;
 }
+
+.center2 {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+}
