--- a/css/main.css
+++ b/css/main.css
@@ -98,7 +98,7 @@ h3 {
 
 .center2 {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 50px;
+  margin-right: 50px;
   width: 100%;
 }
